# next-infra

./: .env.example  .gitignore  DOCKER_README.md  README.md  docker-compose-multi.yml  docker-compose.yml  run_collection.ps1
nginx/: default.conf
skillx-app/: .dockerignore  .env.example  Dockerfile  LOGIN_SETUP.md  README.md  package-lock.json  package.json
skillx-app/src/: actions.tsx
skillx-app/src/app/: layout.tsx  page.tsx
skillx-app/src/components/: Button.tsx  LoginForm.tsx
skillx-app/src/db/: README.md  connection.ts  index.ts  init.ts  redis_client.tsx  types.ts  users.ts
skillx-app/src/db/migrations/: 001_create_users_table.sql
skillx-core/: Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
skillx-core/skillx_core/: asgi.py  settings.py  urls.py  wsgi.py
skillx-core/users/: urls.py  views.py
skillx-home/: .dockerignore  Dockerfile  README.md  makefile  next.config.ts  package-lock.json  package.json
skillx-home/src/app/: globals.css  layout.tsx  page.tsx
skillx-home/src/app/sections/: Benefits.tsx  Footer.tsx  MapYourSuccess.tsx  TheBigPicture.tsx  TrustedBy.tsx  WhoAreWe.tsx  WhyChooseArea.tsx  index.tsx
skillx-home/src/components/: Header.tsx  ThemeToggle.tsx  TickListItem.tsx
